k8s/k8s-demo/ingress-nginx/message-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-message-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.bboymars.com
    http:
      paths:
      - backend:
          serviceName: message-service
          servicePort: 8182
      - path: /message
