k8s/k8s-demo/ingress-nginx/user-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-user-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.bboymars.com
    http:
      paths:
      - backend:
          serviceName: user-service
          servicePort: 8181
